@@ -215,6 +215,7 @@ typedef enum {
 	ESLURM_RESERVATION_USER_GROUP,
 	ESLURM_PARTITION_ASSOC =			2130,
 	ESLURM_IN_STANDBY_USE_BACKUP,
+	ESLURM_BAD_THREAD_PER_CORE,
 
 	/* SPANK errors */
 	ESPANK_ERROR = 					3000,
